@@ -8,6 +8,7 @@
     * 3741 FIX: omd_status: Fix labelling and structure of several metric graphs
     * 3986 FIX: esx_vsphere_counters.uptime: fixed incorrect alert when receiving corrupted counter data...
     * 3952 FIX: diskstat: fixed bug if multipath devices having an alias...
+    * 3939 FIX: f5_bigip_conns: readded performance data and graphs...
 
     Multisite:
     * 3970 SEC: Fixed possible URL injection on index page...
